--- a/style.css
+++ b/style.css
@@ -1,10 +1,19 @@
+@font-face {
+    font-family: 'ambystoma_mexicanumregular';
+    src: url('ambystomamexicanum-vr7v-webfont.woff2') format('woff2'),
+         url('ambystomamexicanum-vr7v-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
     background-color: brown;
     text-align: center;
     color: white;
     font-weight: bold;
     text-transform: uppercase;
-    font-size: calc(1em + 1vw)   
+    font-size: calc(1em + 1vw);
+    font-family: "ambystoma_mexicanumregular";   
 }
 
 a:link {
@@ -45,6 +54,7 @@ footer {
     left: 0;
     right: 0;
     bottom: 2%;
+    font-family: 'monospace';
 }
 
 @keyframes winDance {
@@ -234,4 +244,3 @@ footer {
             margin-top: 5%;
         }
     }
-
