--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ footer {
     }
 
     /* large latop screens */
-    @media (min-width: 1080px) and (max-height: 1100px) { 
+    @media (max-width: 2000px) and (max-height: 1000px) { 
         .logo {
             max-width: 20%;
         } 
