--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 @font-face {
     font-family: 'ambystoma_mexicanumregular';
     src: url('./assets/fonts/ambystomamexicanum-vr7v-webfont.woff2') format('woff2'),
@@ -21,20 +26,24 @@ a:link, a:visited, a:active {
     color: inherit;
 }
 
-.head, .container {
-    margin: 5% 0 0 0;
+.head {
+    margin-top: 1vw;
+}
+
+.container {
+    margin-top: 10vw; 
 }
 
 .logo {
-    max-width: 80%;
-}
-
-.pinata {
     max-width: 60%;
 }
 
-.errorList {
-    text-decoration-line: line-through;
+.pinata {
+    max-width: 40%;
+}
+
+.target {
+    margin-top: 15vw;
 }
 
 .input {
@@ -42,12 +51,20 @@ a:link, a:visited, a:active {
     font-size: inherit;
     max-width: 20%;
     text-transform: inherit;
+    margin-top: 5vw;
+}
+
+.errorList {
+    text-decoration-line: line-through;
+    margin-top: 5vw;
 }
 
 .reload {
     transform: scale(1.5);
     cursor: pointer;
+    margin-top: 10vw;
 }
+
 
 footer {
     font-size: small;
@@ -70,201 +87,217 @@ footer {
     100% {transform: scale(1.0);}
 }
 
-/*MEDIA QUERIES*/
+/*Media queries*/
 
-    /*small phones*/
-    @media (max-width: 375px) and (max-height: 667px) {
-        .target, .input, .errorList {
-            margin-top: 5%;
-        }
-
-        .reload {
-            margin-top: 7%;
-        }
+@media screen and (min-height: 700px) {
+     .logo {
+        max-width: 80%;
+    }
+    
+    .pinata {
+        max-width: 60%;
     }
 
-    /*medium phones*/
-    @media (min-height: 700px) {
-        .target, .input, .errorList, .reload {
-            margin-top: 5%;
-        }
+    .target {
+        margin-top: 10vw;
+    }
+    
+    .input {
+        margin-top: 10vw;
+    }
+}
+
+/*desktop half screen*/
+@media screen and (min-height: 950px) {
+    .logo {
+        max-width: 30%;
+     }
+ 
+     .container {
+         margin-top: 5vw;
+     }
+ 
+    .pinata {
+        max-width: 30%;
+     }
+ 
+    .target {
+        margin-top: 5vw;
+     }
+ 
+     .input, .errorList {
+         margin-top: 3vw;
+     }
+ 
+    .reload {
+         margin-top: 6vw;
+     }
+} 
+
+@media screen and (min-height: 700px) and (min-width: 1000px) {
+    .logo {
+        max-width: 20%;
+     }
+ 
+     .container {
+         margin-top: 3vw;
+     }
+ 
+    .pinata {
+        max-width: 15%;
+    }
+ 
+    .target, .input, .errorList, .reload {
+        margin-top: 1vw;
+    }
+ 
+    .reload {
+         margin-top: 2vw;
+         transform: scale(1.0);
+     }
+ }
+
+ /*for the ipad, not sure if it breaks something else*/
+ @media screen and (min-height: 1000px) and (min-width: 750px) {
+    .logo {
+       max-width: 50%;
     }
 
-    /*long phones*/
-    @media (min-height: 800px) {
-        .target, .input, .errorList, .reload {
-            margin-top: 6%;
-        }
+    .container {
+        margin-top: 10vw;
     }
 
-    /* Medium devices*/
-    @media (min-width: 760px) {
-        .head {
-            margin-top: 5%
-        }
-        
-        .logo {
-            max-width: 35%;
-        } 
-
-        .pinata {
-            max-width: 25%;
-        }
-
-        .target, .input, .errorList, .reload {
-            margin-top: 5%;
-        }
+   .pinata {
+       max-width: 35%;
     }
 
-    /* MDPI laptop and landscape Ipad */
-    @media (min-width: 1280px) and (min-height: 810px) {
-        .logo {
-            max-width: 20%;
-        } 
-
-        .pinata {
-            max-width: 20%;
-        }
+   .target {
+       margin-top: 10vw;
     }
 
-    /* large screens */
-    @media (min-width: 1080px) { 
-        .logo {
-            max-width: 35%;
-        } 
-
-        .pinata {
-            max-width: 35%;
-        }
-
-        .head, .container {
-            margin: 3% 0;
-        }
-        
-        .target, .input, .errorList {
-            margin-top: 2%;
-        }
-
-        body {
-            font-size: xx-large;
-        }
-
-        footer {
-            font-size: large;
-        }
+    .input, .errorList {
+        margin-top: 3vw;
     }
 
-    /* large latop screens */
-    @media (max-width: 2000px) and (max-height: 1000px) { 
-        .logo {
-            max-width: 20%;
-        } 
+   .reload {
+        margin-top: 6vw;
+    }
+} 
 
-        .pinata {
-            max-width: 12%;
-        }
-
-        .head, .container {
-            margin: 2% 0;
-        }
-        
-        .target, .input, .errorList {
-            margin-top: 2%;
-        }
-
-        .reload {
-            margin-top: 3%;
-        }
-
-        body {
-            font-size: xx-large;
-        }
-
-        footer {
-            font-size: large;
-        }
+ @media screen and (min-height: 1100px) and (min-width: 750px) {
+    .logo {
+       max-width: 50%;
     }
 
-    /* tvs */
-    @media (min-width: 1920px) {
-        .logo {
-            max-width: 20%;
-        } 
-
-        .pinata {
-            max-width: 12%;
-        }
-
-        .head, .container {
-            margin: 3% 0;
-        }
-        
-        .target, .input, .errorList {
-            margin-top: 1.5%;
-        }
-
-        .reload {
-            margin-top: 2%;
-        }
-
-        footer {
-            font-size: large;
-        }
+    .container {
+        margin-top: 10vw;
     }
 
-    @media (min-width: 3000px) {
-        .reload {
-            margin-top: 3%;
-        }
-
-        footer {
-            font-size: xx-large;
-        }
+   .pinata {
+       max-width: 40%;
     }
 
-
-    /* Custom queries*/
-    /* 720p HD TV */
-    @media (width: 1280px) and (height: 720px) {
-        .logo {
-            max-width: 15%;
-        } 
-
-        .pinata {
-            max-width: 13%;
-        }
-
-        .reload {
-            margin-top: 3%;
-        }
+   .target {
+       margin-top: 15vw;
     }
 
-    /* Ipad */
-    @media (width: 810px) and (height: 1080px) {
-        .logo {
-            max-width: 50%;
-        } 
-
-        .pinata {
-            max-width: 35%;
-        }
-
-        .target, .reload {
-            margin-top: 5%;
-        }
+    .input, .errorList {
+        margin-top: 5vw;
     }
 
-    /* Kindle */
-    @media (width: 800px) and (height: 1280px) {
-        .logo {
-            max-width: 50%;
-        } 
-
-        .pinata {
-            max-width: 50%;
-        }
-
-        .target, .reload {
-            margin-top: 5%;
-        }
+   .reload {
+        margin-top: 12vw;
     }
+} 
+
+@media screen and (min-height: 750px) and (min-width: 1100px) {
+    .logo {
+       max-width: 20%;
+    }
+
+    .container {
+        margin-top: 5vw;
+    }
+
+   .pinata {
+       max-width: 15%;
+    }
+
+   .target {
+       margin-top: 3vw;
+    }
+
+    .input, .errorList {
+        margin-top: 2vw;
+    }
+
+   .reload {
+        margin-top: 2vw;
+    }
+} 
+
+/*fixed this for my screen, not sure if it breaks something else*/
+@media screen and (min-height: 950px) and (min-width: 1800px) {
+    body {
+        font-size: x-large;
+    }
+    
+    .logo {
+       max-width: 20%;
+    }
+
+    .container {
+        margin-top: 3vw;
+    }
+
+   .pinata {
+       max-width: 15%;
+    }
+
+   .target {
+       margin-top: 3vw;
+    }
+
+    .input, .errorList {
+        margin-top: 2vw;
+    }
+
+   .reload {
+        margin-top: 2vw;
+    }
+} 
+
+@media screen and (min-height: 2000px)  {
+    body {
+        font-size: calc(1em + 1vw);
+    }
+    
+    .logo {
+       max-width: 20%;
+    }
+
+    .container {
+        margin-top: 8vw;
+    }
+
+   .pinata {
+       max-width: 100%;
+       transform: scale(1.5);
+    }
+
+   .target {
+       margin-top: 8vw;
+    }
+
+    .input, .errorList {
+        margin-top: 2vw;
+    }
+
+   .reload {
+        margin-top: 3vw;
+    }
+
+    footer {
+        font-size: xx-large;
+    }
+} 
